Added number input

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -146,6 +146,19 @@ a {
   }
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
 .purple {
   /* background-color: #b983ff; */
   background: #7d48fe;
