--- a/components/fragments/blocks/title-block/tile-block.module.scss
+++ b/components/fragments/blocks/title-block/tile-block.module.scss
@@ -1,15 +1,17 @@
 .block {
-  border-radius: 10px;
+  border-radius: var(--border-radius-2);
   color: black;
   font-size: 1rem;
-  padding: 10px 30px;
+  padding: var(--padding-1);
   > h2 {
     font-size: 23px;
     font-weight: 700;
     margin-bottom: 0;
     text-transform: uppercase;
+    margin-bottom: 1rem;
   }
   > p {
     font-size: 1.4rem;
+    font-weight: 400;
   }
 }
