--- a/pages/contact/contact.module.scss
+++ b/pages/contact/contact.module.scss
@@ -10,12 +10,13 @@
 
 .block {
   background-color: var(--btn-color);
-  padding: 20px;
-  border-radius: 10px;
+  padding: var(--block-padding);
+  border-radius: var(--border-radius-1);
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: var(--margin-1);
 }
 
 .wrapperIconTxt {
@@ -25,10 +26,9 @@
   justify-content: space-around;
   margin-top: auto;
 
-  border-radius: 10px;
-  margin-bottom: 30px;
+  border-radius: var(--border-radius-2);
   height: 200px;
-  gap: 5px;
+  gap: var(--margin-1);
   padding-inline: 20px;
 }
 
@@ -62,7 +62,7 @@
 
 .contentGrid {
   display: grid;
-  gap: 20px;
+  gap: var(--margin-1);
   @include mixins.desktop {
     grid-template-columns: 1fr 1fr;
   }
