--- a/components/fragments/progress-tracker/progress-tracker.module.scss
+++ b/components/fragments/progress-tracker/progress-tracker.module.scss
@@ -4,7 +4,7 @@
   --indicator-width: 200px;
 
   background-color: var(--btn-color);
-  border-radius: 10px;
+  border-radius: var(--border-radius-1);
   overflow-x: auto;
   scroll-behavior: smooth;
 
@@ -65,8 +65,6 @@
   text-align: center;
   font-weight: 700;
   text-transform: uppercase;
-
-  margin: 0;
 
   display: flex;
   align-items: center;
