--- a/components/layout/header/profile/profile.module.scss
+++ b/components/layout/header/profile/profile.module.scss
@@ -43,23 +43,19 @@
   z-index: 10;
 
   padding: 20px;
-  border-radius: 10px;
+  border-radius: var(--border-radius-1);
   box-shadow: 0 0 15px 0 black;
 
   background-color: var(--btn-color);
 
   > ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
 
     display: grid;
     gap: 10px;
 
     > li {
       list-style-type: none;
-      margin: 0;
-      padding: 0;
     }
   }
 }
