--- a/pages/auth/signin/signin.module.scss
+++ b/pages/auth/signin/signin.module.scss
@@ -17,7 +17,7 @@
 
 .box {
   background-color: var(--btn-color);
-  border-radius: 10px;
+  border-radius: var(--border-radius-1);
   padding: 1rem;
 
   display: flex;
@@ -35,7 +35,7 @@
   color: var(--btn-color);
   font-weight: 800;
   font-size: 2rem;
-  gap: 1rem;
+  gap: var(--margin-1);
   text-align: center;
   padding-inline: 1rem;
 
