--- a/pages/community/community.module.scss
+++ b/pages/community/community.module.scss
@@ -10,10 +10,10 @@
 
 .grid {
   display: grid;
-  gap: 1.5rem;
+  gap: var(--margin-1);
   background-color: var(--btn-color);
-  padding: 20px;
-  border-radius: 20px;
+  padding: var(--block-padding);
+  border-radius: var(--border-radius-1);
   grid-template-columns: 1fr 1fr;
   @include mixins.mobile {
     grid-template-columns: 1fr;
@@ -22,7 +22,6 @@
 
 @mixin largeButton {
   @include mixins.button;
-  padding: 0;
   display: flex;
   align-items: center;
   background: white;
@@ -32,7 +31,7 @@
 
 .button {
   @include largeButton;
-  border-radius: 10px;
+  border-radius: var(--border-radius-2);
   h3 {
     display: inline-block;
     font-size: 1.5rem;
@@ -63,7 +62,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 10px 0 0 10px;
+  border-radius: var(--border-radius-2) 0 0 var(--border-radius-2);
   transition: 300ms;
   border-right: 10px solid var(--btn-2-color);
 }
