--- a/pages/join/join.module.scss
+++ b/pages/join/join.module.scss
@@ -6,32 +6,27 @@
 
 .block {
   background-color: var(--btn-color);
-  border-radius: 10px;
+  border-radius: var(--border-radius-1);
   display: flex;
   flex-direction: column;
   font-size: 1rem;
-  gap: 16px;
-  padding: 16px;
+  gap: var(--margin-1);
+  padding: var(--block-padding);
 
   > h2 {
     color: black;
     font-size: 1.4rem;
-    margin: 0;
-    padding: 1rem 0 !important;
+
+    padding: var(--padding-3) !important;
     text-align: center;
     width: 100%;
-    border-radius: 10px;
+    border-radius: var(--border-radius-2);
   }
 
   > p {
     flex-grow: 1;
     line-height: 1.25rem;
     text-align: justify;
-  }
-
-  > *:not(:last-child) {
-    margin: 0;
-    padding: 0;
   }
 }
 
@@ -49,8 +44,7 @@
 .grid {
   color: white;
   display: grid;
-  gap: 1.5rem;
-  margin: 30px 0 0 0;
+  gap: var(--margin-1);
 
   @include mixins.desktop {
     grid-template-columns: 2fr 1fr;
@@ -60,15 +54,7 @@
 .discordEmbed {
   height: 100%;
   width: 100%;
-  border-radius: 10px;
-}
-
-.video {
-  margin: auto;
-  margin-bottom: 20px;
-  height: 300px;
-  width: 100%;
-  border-radius: 0 0 10px 10px;
+  border-radius: var(--border-radius-1);
 }
 
 .subheader {
