--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -36,8 +36,6 @@ $rounded-radius: 10px;
   font-size: 3.2em;
   font-weight: 800;
 
-  margin: 0;
-
   padding-block: 1rem;
 
   text-transform: uppercase;
@@ -50,7 +48,7 @@ $rounded-radius: 10px;
 
 @mixin button {
   background: var(--btn-2-color) !important;
-  border-radius: 10px;
+  border-radius: var(--border-radius-2);
   box-shadow: 0 4px 5px 0 black;
   color: var(--bg-color) !important;
   display: block;
@@ -72,7 +70,7 @@ $rounded-radius: 10px;
 
 @mixin block-button {
   background: var(--bg-color) !important;
-  border-radius: 10px;
+  border-radius: var(--border-radius-2);
   color: var(--text-color) !important;
   display: block;
   font-size: 1.3rem;
@@ -93,24 +91,22 @@ $rounded-radius: 10px;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
+  padding: var(--margin-1);
 }
 
 @mixin information-block {
   align-items: center;
   background-color: var(--btn-color);
-  border-radius: 10px;
+  border-radius: var(--border-radius-1);
   color: var(--text-color);
   display: flex;
   flex-direction: column;
-  margin: 20px 0;
   padding: 20px;
   text-align: center;
   > h2 {
     text-transform: uppercase;
   }
-  > * {
-    margin: 0;
-  }
+
   & a {
     text-decoration: underline;
   }
