Some style changes, disabled apply for staff btn

--- a/components/fragments/application/application.module.scss
+++ b/components/fragments/application/application.module.scss
@@ -60,6 +60,11 @@
   @include mixins.block-button;
 }
 
+.blockButton:disabled {
+  color: var(--light-gray) !important;
+  cursor: not-allowed;
+}
+
 .subTitle {
   @include mixins.subheader;
 }
