Weird application bug

--- a/components/fragments/application/application.module.scss
+++ b/components/fragments/application/application.module.scss
@@ -158,17 +158,6 @@
   > * {
     border-radius: var(--border-radius-1);
 
-    background: linear-gradient(90deg, #ffffff10, #ffffff10, #ffffff15, #ffffff10, #ffffff10);
-    background-size: 200% 100%;
-    animation: skeleton 1s linear infinite;
-  }
-}
-
-@keyframes skeleton {
-  0% {
-    background-position: 0% 0%;
-  }
-  100% {
-    background-position: 200% 0%;
+    @include mixins.skeleton-animation;
   }
 }
