--- a/components/fragments/review/card-styles.module.scss
+++ b/components/fragments/review/card-styles.module.scss
@@ -1,3 +1,4 @@
+@use 'styles/mixins.scss' as mixins;
 .wrapper {
   background-color: var(--btn-color);
   padding: var(--padding-3);
@@ -81,4 +82,11 @@
 
 .loadDetector {
   width: 0;
+  margin-left: calc(var(--margin-1) * -1);
+}
+
+.skeleton {
+  min-width: 300px;
+
+  @include mixins.skeleton-animation;
 }
