--- a/components/fragments/review/card-styles.module.scss
+++ b/components/fragments/review/card-styles.module.scss
@@ -46,19 +46,19 @@
 }
 
 .accepted {
-  border-color: #6de36b;
+  border-color: #6de36b !important;
 }
 
 .pending {
-  border-color: #eae453;
+  border-color: #eae453 !important;
 }
 
 .notReviewed {
-  border-color: #3789e9;
+  border-color: #3789e9 !important;
 }
 
 .denied {
-  border-color: #e36b6b;
+  border-color: #e36b6b !important;
 }
 
 .selector {
