--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -69,9 +69,9 @@ $rounded-radius: 10px;
 }
 
 @mixin block-button {
-  background: var(--bg-color) !important;
+  background: var(--bg-color);
   border-radius: var(--border-radius-2);
-  color: var(--text-color) !important;
+  color: var(--text-color);
   display: block;
   font-size: 1.3rem;
   font-weight: 600;
