--- a/styles/style.scss
+++ b/styles/style.scss
@@ -52,6 +52,11 @@
     scroll-behavior: unset;
   }
 
+  --accept-color: #7bec7a;
+  --review-color: #dfdc5b;
+  --deny-color: #e06060;
+  --pending-color: #4f98eb;
+
   --margin-0: 1.5rem;
   --margin-1: 1rem;
 
