Slight adjustments and optimizations

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,8 +53,8 @@
   }
 
   --accept-color: #7bec7a;
-  --review-color: #dfdc5b;
-  --deny-color: #e06060;
+  --review-color: #ffe45e;
+  --deny-color: #ff5252;
   --pending-color: #4f98eb;
 
   --margin-0: 1.5rem;
