--- a/components/fragments/review/decision.module.scss
+++ b/components/fragments/review/decision.module.scss
@@ -42,3 +42,16 @@
 
   background-color: var(--accept-color) !important;
 }
+
+.pending {
+  background-color: var(--pending-color) !important;
+}
+
+.statusLine {
+  width: 100%;
+  height: 5px;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
