--- a/components/fragments/blocks/form-blocks/loading-bar.module.scss
+++ b/components/fragments/blocks/form-blocks/loading-bar.module.scss
@@ -2,9 +2,17 @@
   width: 100%;
   height: 10px;
 
-  background: linear-gradient(90deg, #6590ff 0%, #74d3ff 50%, #6590ff 100%);
+  --loading-color: #6cb1ff;
+  --between-color: #6cb1ff50;
+
+  background: linear-gradient(
+    90deg,
+    var(--between-color),
+    var(--loading-color),
+    var(--between-color)
+  );
   background-size: 200% 100%;
-  animation: loading 1.5s linear infinite;
+  animation: loading 2s linear infinite;
 }
 
 @keyframes loading {
