Rules page and limited-table

--- a/components/fragments/blocks/blocks.module.scss
+++ b/components/fragments/blocks/blocks.module.scss
@@ -225,3 +225,103 @@
 
   font-weight: 400;
 }
+
+.tableRow {
+  --start-width: 5rem;
+
+  display: grid;
+  grid-template-columns: auto 8rem;
+  align-items: stretch;
+  gap: var(--margin-1);
+
+  @include mixins.mobile {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(2, auto);
+    align-items: center;
+  }
+
+  .start {
+    background-color: white;
+    padding: var(--block-padding);
+
+    width: var(--start-width);
+    height: 100%;
+
+    display: grid;
+    align-items: center;
+
+    font-weight: 700;
+
+    text-align: center;
+
+    position: absolute;
+
+    color: var(--bg-color);
+  }
+
+  .tableContent {
+    display: grid;
+    align-items: center;
+
+    margin-left: var(--start-width);
+  }
+
+  .end {
+    background-color: var(--bg-color);
+    padding: var(--padding-3);
+    text-align: center;
+
+    @include mixins.desktop {
+      width: 8rem;
+
+      display: grid;
+      align-items: center;
+
+      margin: calc((var(--padding-3) - 5px) * -1);
+      margin-left: auto;
+    }
+
+    @include mixins.mobile {
+      margin-left: var(--start-width);
+      border-radius: var(--border-radius-2);
+
+      &::before {
+        content: 'Retributions: ';
+      }
+    }
+  }
+
+  @include mixins.desktop {
+    &:first-child .end {
+      border-radius: 1rem 1rem 0 0;
+    }
+
+    &:last-child .end {
+      border-radius: 0 0 1rem 1rem;
+    }
+  }
+}
+
+.labels {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--margin-1);
+
+  > :nth-child(2) {
+    text-align: center;
+  }
+
+  > :last-child {
+    text-align: end;
+  }
+
+  @include mixins.mobile {
+    display: none;
+  }
+}
+
+.tableWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: var(--margin-1);
+}
