--- a/pages/rules/rules.module.scss
+++ b/pages/rules/rules.module.scss
@@ -4,6 +4,10 @@
   @include mixins.title;
 }
 
+.subheader {
+  @include mixins.subheader;
+}
+
 .block {
   background-color: var(--btn-color);
   padding: 1rem;
